# operating-systems-final-project

./: .gitignore  LICENSE.txt  Makefile  README.md  main.py  pssim  pyproject.toml  reqruirements.txt  requirements.txt
config/: process.yaml
modules/: args.py  process.py  scheduler.py  simenv.py
modules/process/: core.py  factory.py  status.py
src/pssim/: __main__.py
src/pssim/config/: mem.yaml  process.yaml  sim.yaml
src/pssim/interfaces/: memory.py  process.py  scheduler.py  ui.py
src/pssim/modules/: args.py  config.py  memory-manager.py  simenv.py  tui.py
src/pssim/modules/common/: types.py
src/pssim/modules/config/: __init__.py  commands.py  helpers.py  loaded.py  models.py
src/pssim/modules/memory/: core.py  manager.py  strategy.py
src/pssim/modules/process/: core.py  factory.py  status.py
src/pssim/modules/scheduler/: core.py  strategy.py
